[metadata]
name = Autoclimate
version = 0.0.1
description = Autolclimate - Support functions for climate entities
author = Ross Rosen
author_email = rrosen326@gmail.com
url = https://github.com/rr326/ad_app_autoclimate

[options]
packages = find:
install_requires = 
    appdaemon
python_requires = >=3.8.0